load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "_fixtures_lib",
    srcs = [
        "badflags.go",
        "binarytrees.go",
        "bpcountstest.go",
        "break.go",
        "buildflagtest.go",
        "callme.go",
        "cat.go",
        "cgodisass.go",
        "cgosigsegvstack.go",
        "cgotest.go",
        "clientdo.go",
        "condperghitcount.go",
        "consts.go",
        "continuetestprog.go",
        "coreemptystring.go",
        "databpcountstest.go",
        "databpeasy.go",
        "databpstack.go",
        "decllinetest.go",
        "defercall.go",
        "deferstack.go",
        "dotpackagesiface.go",
        "doubleinline.go",
        "dwzcompression.go",
        "ebpf_trace.go",
        "examinememory.go",
        "fatalerror.go",
        "fncall.go",
        "genericbp.go",
        "goroutineLabels.go",
        "goroutinebreak.go",
        "goroutinegroup.go",
        "goroutines-trace.go",
        "goroutinestackprog.go",
        "hcbpcountstest.go",
        "http_server.go",
        "ifaceembcall.go",
        "increment.go",
        "integrationprog.go",
        "is sue239.go",
        "issue1101.go",
        "issue1264.go",
        "issue1374.go",
        "issue1432.go",
        "issue1469.go",
        "issue1531.go",
        "issue1549.go",
        "issue1598.go",
        "issue1601.go",
        "issue1615.go",
        "issue1795.go",
        "issue1817.go",
        "issue2023.go",
        "issue2078.go",
        "issue2086.go",
        "issue2113.go",
        "issue2138.go",
        "issue2162.go",
        "issue262.go",
        "issue2896.go",
        "issue305.go",
        "issue3194.go",
        "issue332.go",
        "issue384.go",
        "issue387.go",
        "issue406.go",
        "issue419.go",
        "issue528.go",
        "issue561.go",
        "issue573.go",
        "issue594.go",
        "issue664.go",
        "issue683.go",
        "issue871.go",
        "issue877.go",
        "issue951.go",
        "livetestprog.go",
        "locationsUpperCase.go",
        "locationsprog.go",
        "locationsprog2.go",
        "locationsprog3.go",
        "locationsprog_generic.go",
        "longstrings.go",
        "loopprog.go",
        "math.go",
        "morestringarg.go",
        "nextcond.go",
        "notify-v2.go",
        "panic.go",
        "parallel_next.go",
        "pkgrenames.go",
        "plugintest.go",
        "plugintest2.go",
        "pr1055.go",
        "redirect.go",
        "reflecttypefncall.go",
        "restartargs.go",
        "retstack.go",
        "scopeescapevareval.go",
        "scopetest.go",
        "sigchldprog.go",
        "sleep.go",
        "spawn.go",
        "stacktraceprog.go",
        "stepintobug.go",
        "stepoutret.go",
        "stepshadow.go",
        "test.c",
        "testargs.go",
        "testdeadlock.go",
        "testenv.go",
        "testfnpos.go",
        "testfnpos1.go",
        "testfnpos2.go",
        "testinline.go",
        "testnextdefer.go",
        "testnextnethttp.go",
        "testnextprog.go",
        "testprog.go",
        "testrerecord.go",
        "testreturnaddress.go",
        "testruntimebreakpoint.go",
        "testshadow.go",
        "teststep.go",
        "teststepconcurrent.go",
        "teststepprog.go",
        "testthreads.go",
        "testtoggle.go",
        "testunsafepointers.go",
        "testvariables.go",
        "testvariables2.go",
        "testvariables_generic.go",
        "traceperf.go",
        "traceprog.go",
        "workdir.go",
    ],
    cgo = True,
    clinkopts = [
        "-framework CFNetwork",
        "-framework CoreFoundation",
    ],
    copts = ["-g -Wall -O0"],
    importpath = "github.com/go-delve/delve/_fixtures",
    visibility = ["//visibility:private"],
    deps = [
        "//_fixtures/internal/dir.io:dir_io",
        "//_fixtures/internal/dir.io/io.io:io_io",
        "//_fixtures/internal/dir0/pkg",
        "//_fixtures/internal/dir0/renamedpackage",
        "//_fixtures/internal/dir1/pkg",
        "//_fixtures/internal/pluginsupport",
        "//vendor/github.com/go-delve/liner",
    ],
)

go_binary(
    name = "_fixtures",
    embed = [":_fixtures_lib"],
    visibility = ["//visibility:public"],
)
