load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "client.go",
        "config.go",
        "listenerpipe.go",
        "rpccallback.go",
        "server.go",
    ],
    importpath = "github.com/go-delve/delve/service",
    visibility = ["//visibility:public"],
    deps = [
        "//service/api",
        "//service/debugger",
    ],
)
