load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "split.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//service/api",
        "//vendor/gopkg.in/yaml.v2:yaml_v2",
    ],
)

go_test(
    name = "config_test",
    srcs = ["split_test.go"],
    embed = [":config"],
)
