load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proc",
    srcs = [
        "amd64_arch.go",
        "amd64_disasm.go",
        "arch.go",
        "arm64_arch.go",
        "arm64_disasm.go",
        "bininfo.go",
        "breakpoints.go",
        "disasm.go",
        "doc.go",
        "dump.go",
        "eval.go",
        "eval_go117.go",
        "eval_go118.go",
        "fncall.go",
        "goroutine_cache.go",
        "i386_arch.go",
        "i386_disasm.go",
        "interface.go",
        "mem.go",
        "moduledata.go",
        "pe.go",
        "registers.go",
        "stack.go",
        "stackwatch.go",
        "target.go",
        "target_exec.go",
        "target_group.go",
        "threads.go",
        "types.go",
        "variables.go",
        "x86_disasm.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/proc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/astutil",
        "//pkg/dwarf",
        "//pkg/dwarf/frame",
        "//pkg/dwarf/godwarf",
        "//pkg/dwarf/line",
        "//pkg/dwarf/loclist",
        "//pkg/dwarf/op",
        "//pkg/dwarf/reader",
        "//pkg/dwarf/regnum",
        "//pkg/elfwriter",
        "//pkg/goversion",
        "//pkg/logflags",
        "//pkg/proc/debuginfod",
        "//pkg/proc/internal/ebpf",
        "//pkg/version",
        "//vendor/github.com/hashicorp/golang-lru/simplelru",
        "//vendor/golang.org/x/arch/arm64/arm64asm",
        "//vendor/golang.org/x/arch/x86/x86asm",
    ],
)

go_test(
    name = "proc_test",
    srcs = [
        "dwarf_export_test.go",
        "dwarf_expr_test.go",
        "proc_general_test.go",
        "proc_linux_test.go",
        "proc_test.go",
        "proc_unexported_test.go",
        "proc_unix_test.go",
        "scope_test.go",
        "variable_test.go",
        "variables_fuzz_test.go",
        "variables_test.go",
    ],
    embed = [":proc"],
    deps = [
        "//pkg/dwarf/dwarfbuilder",
        "//pkg/dwarf/frame",
        "//pkg/dwarf/godwarf",
        "//pkg/dwarf/op",
        "//pkg/dwarf/regnum",
        "//pkg/goversion",
        "//pkg/logflags",
        "//pkg/proc/core",
        "//pkg/proc/gdbserial",
        "//pkg/proc/linutil",
        "//pkg/proc/native",
        "//pkg/proc/test",
        "//service/api",
        "//vendor/golang.org/x/arch/x86/x86asm",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//vendor/golang.org/x/sys/unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//vendor/golang.org/x/sys/unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//vendor/golang.org/x/sys/unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//vendor/golang.org/x/sys/unix",
        ],
        "//conditions:default": [],
    }),
)
