load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "debugger",
    srcs = [
        "debugger.go",
        "debugger_linux.go",
    ],
    importpath = "github.com/go-delve/delve/service/debugger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dwarf/op",
        "//pkg/gobuild",
        "//pkg/goversion",
        "//pkg/locspec",
        "//pkg/logflags",
        "//pkg/proc",
        "//pkg/proc/core",
        "//pkg/proc/gdbserial",
        "//pkg/proc/native",
        "//service/api",
        "//vendor/github.com/sirupsen/logrus",
    ],
)

go_test(
    name = "debugger_test",
    srcs = [
        "debugger_test.go",
        "debugger_unix_test.go",
    ],
    embed = [":debugger"],
    deps = [
        "//pkg/gobuild",
        "//pkg/proc/test",
        "//service/api",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//vendor/github.com/creack/pty",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//vendor/github.com/creack/pty",
        ],
        "//conditions:default": [],
    }),
)
